# ComfyUI-Smart-Resolution-Calc

./: .gitignore  .repokit.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  setup.py  version.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: publish-to-registry.yml
docs/: image-input.md
py/: smart_resolution_calc.py  test_dimension_source_calculator.py
scripts/: install-hooks.sh  update-version.sh
scripts/hooks/: pre-push
tests/: test_dimension_source_calculator.py
tests/one-offs/: README.md  clean_performance_tests.py  run_performance_tests.py
tests/one-offs/performance/: LOGGING_PERFORMANCE_ANALYSIS.md  test_logging_performance.html
web/: smart_resolution_calc.js  tooltip_content.js
web/managers/: dimension_source_manager.js
web/utils/: debug_logger.js
